<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="ravi.androidapp.movies.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/first"
            android:layout_height="250dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:weightSum="2"
            >
            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <ImageView
                    android:id="@+id/Latestmovies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="getallmovies"
                    android:scaleType="centerCrop"
                    android:src="@drawable/latest"
                    android:tag="Latestmovies" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#55000000"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/latest_movies"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <ImageView
                    android:id="@+id/Actionmovies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="getallmovies"
                    android:scaleType="centerCrop"
                    android:src="@drawable/action"
                    android:tag="Actionmovies" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#55000000"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:text="@string/action_movies"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />


            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/first"
            android:id="@+id/second"
            android:layout_height="250dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:weightSum="2"
            >


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <ImageView
                    android:id="@+id/Animatedmovies"
                    android:tag="Animatedmovies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/animation"
                    android:onClick="getallmovies"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:text="@string/animated_movies"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:background="#55000000"/>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <ImageView
                    android:id="@+id/Comedymovies"
                    android:tag="Comedymovies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/comedy"
                    android:onClick="getallmovies"/>
                <TextView
                    android:id="@+id/picturetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:text="@string/comedy_movies"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:background="#55000000"/>


            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/second"
            android:id="@+id/third"
            android:layout_height="250dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:weightSum="2"
            >

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <ImageView
                    android:id="@+id/Horrormovies"
                    android:tag="Horrormovies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horror"
                    android:onClick="getallmovies"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:text="@string/horror_movies"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:background="#55000000"/>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                card_view:cardCornerRadius="8dp"
                card_view:cardElevation="8dp">

                <ImageView
                    android:id="@+id/Sciencemovies"
                    android:tag="Sciencemovies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/science"
                    android:onClick="getallmovies"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="bottom"
                    android:textColor="@android:color/white"
                    android:text="@string/sci_fi_movies"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:background="#55000000"/>


            </android.support.v7.widget.CardView>
        </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>